# delphai

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: build-libs.yml
.reports/: codemap-diff.txt
crates/delphai-bench/: Cargo.toml
crates/delphai-bench/benches/: llm_throughput.rs
crates/delphai-bench/src/: lib.rs
crates/delphai-core/: Cargo.toml
crates/delphai-core/src/: animal.rs  lib.rs  move_state.rs  pathfinding.rs  resource.rs  tech.rs  world.rs
crates/delphai-core/src/agent/: behavior.rs  citizen.rs  conversation.rs  mod.rs
crates/delphai-core/src/llm/: memory.rs  mod.rs  player2.rs  prompt.rs  provider.rs  queue.rs  response_parser.rs
crates/delphai-gdext/: Cargo.toml
crates/delphai-gdext/src/: lib.rs
docs/: architecture-rule.md  context-engineering.md  parameter-design.md  secure-by-design.md  testing.md  wardley-map.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
game/: delphai.gdextension  delphai.gdextension.uid  project.godot
game/assets/: inventry.md
game/scenes/: citizen_sprite.gd  citizen_sprite.gd.uid  main.gd  main.gd.uid  main.tscn  map.gd  map.gd.uid  world.gd  world.gd.uid  world.tscn
game/scripts/: animal_factory.gd  animal_factory.gd.uid  citizen_factory.gd  citizen_factory.gd.uid  debug_hud.gd  debug_hud.gd.uid  glb_loader.gd  glb_loader.gd.uid  resource_factory.gd  resource_factory.gd.uid  terrain_builder.gd  terrain_builder.gd.uid  village_builder.gd  village_builder.gd.uid
game/scripts/tests/: smoke_citizen_motion.gd  smoke_citizen_motion.gd.uid
prebuilt/macos/debug/: libdelphai_gdext.dylib
prebuilt/macos/release/: libdelphai_gdext.dylib
tasks/: lessons.md  phase0-verification.md  todo.md
tasks/phase0/: eval_models.py
