[workspace]
members = ["crates/delphai-core", "crates/delphai-bench"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
criterion = { version = "0.5", features = ["async_tokio"] }
godot = { version = "0.2", features = [] }
