[workspace]
members = ["crates/delphai-core", "crates/delphai-bench", "crates/delphai-gdext"]
default-members = ["crates/delphai-core", "crates/delphai-bench"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
criterion = { version = "0.5", features = ["async_tokio"] }
godot = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
