[package]
name = "delphai-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
# GDExtension plugin (requires Godot headers; OOM-prone in low-memory CI)
godot-extension = ["godot"]

[dependencies]
async-trait = { workspace = true }
godot = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
