[package]
name = "delphai-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
rand.workspace = true
